--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
   </head>
   <body>
     <div class="grid"></div>
+
     <div class="container">
-      <p>Score:</p>
-      <span class="score">0</span>
+      <div class="container-score">
+        <span>Score:</span>
+        <span class="score">0</span>
+      </div>
+        <div>
+        <button class="btn-restart">Restart</button>
+      </div>
+    </div>
+    
+    <div class="start-game">
+      <button class="btn-play">PLAY</button>
     </div>
 
     <div class="overlay">
-      <button class="btn-restart">Restart</button>
+      <button class="btn-restart-lost">Restart</button>
     </div>
 
     <script src="./script.js"></script>
