--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="overlay">
-      <button class="btn-restart-lost">Restart</button>
+      <button class="btn-restart-lost">RESTART</button>
     </div>
 
     <script src="./script.js"></script>
